Update style and fix content to our-team section

--- a/about-us.html
+++ b/about-us.html
@@ -68,8 +68,61 @@
 
         <div class="our-team">
             <div class="our-team-1">
-                <h3>Maria</h3>
-                <p>
+                <div class="cv-logo">
+                    <img src="/assets/images/logo-image.png" alt="">
+                </div>
+
+                <div class="our-team-inner">
+
+                    <h3>Maria Tsimourdagka</h3>
+                    <p>Speech Therapist</p>
+                    <a href="#">View full profile</a>
+                </div>
+            </div>
+
+            <div class="our-team-2">
+                <div class="cv-logo">
+                    <img src="/assets/images/logo-image.png" alt="">
+                </div>
+
+                <div class="our-team-inner">
+
+                    <h3>Aggeliki Teligiannidou</h3>
+                    <p>Speech Therapist</p>
+                    <a href="#">View full profile</a>
+                </div>
+
+            </div>
+        
+            <div class="our-team-3">
+                <div class="cv-logo">
+                    <img src="/assets/images/logo-image.png" alt="">
+                </div>
+
+                <div class="our-team-inner">
+
+                    <h3>Elena Koundourou</h3>
+                    <p>Occupational Therapist</p>
+                    <a href="#">View full profile</a>
+                </div>
+            </div>
+
+            <div class="our-team-4">
+                <div class="cv-logo">
+                    <img src="/assets/images/logo-image.png" alt="">
+                </div>
+
+                <div class="our-team-inner">
+
+                    <h3>Katerina Gkesou</h3>
+                    <p>Occupational Therapist</p>
+                    <a href="#">View full profile</a>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- <p>
                     Maria Tsimourdaga is a graduate of St. Kliment Ohridski University, Sofia, Bulgaria. She holds a
                     higher
                     education degree in Speech Therapy and a second specialty in Hearing and Speech Rehabilitation. She
@@ -110,11 +163,11 @@
                     She has also taken part in educational - experiential seminars of the Gestalt Foundation.
                     It continues to be constantly updated and educated on new scientific methods and developments
                     related to the science of speech therapy.
-                </p>
-            </div>
-            <div class="our-team-2">
-                <h3>Gelly</h3>
-                <p>
+                </p> -->
+
+        <!-- <div class="our-team-2"> -->
+
+        <!-- <p>
                     Teligiannidou Angeliki is a graduate of the speech therapy department of the School of Health and
                     Welfare Professions of the Technological Educational Institute of Epirus in Greece. As part of her
                     diploma thesis, she has conducted a pilot application of the TOPL 1 test in the Greek population.
@@ -149,93 +202,135 @@
                     She continues to be constantly updated and educated on new scientific methods and developments
                     related to
                     the science of speech therapy.
-                </p>
-            </div>
-            <div class="our-team-3">
-                <h3>Elena</h3>
-                <p>
-                    Elena Koundourou studied occupational therapy at the Technological Educational Institute of Athens
-                    and completed her studies at the Karolinska Institute of Stockholm, where she also specialized in
-                    neurological rehabilitation. From 2000 to 2004 she worked as an external collaborator in a
-                    rehabilitation center, special therapies offices and home treatments, while at the same time she
-                    began to specialize in pediatric occupational therapy and even more specifically in autism. From
-                    2005 to 2008 she was in charge of the occupational therapy department at a large rehabilitation
-                    center.
-                    In 2005 she created the occupational therapy center "Exelixis" which maintains to this day with main
-                    interest the rehabilitation of neurological and developmental disorders in children. In 2014, the
-                    occupational therapy center "Exelixis" co-located and permanently collaborated with the Speech and
-                    Language
-                    Therapy Center, thus improving the benefits to its customers. This collaboration developed and
-                    matured, as a
-                    result of which the two centers were united under a new name and the creation of the center for
-                    special therapies "Simeio".
-                    In addition to the above, she is a supervisor of students and graduates of occupational therapy, a
-                    member of the interdisciplinary team of many kindergartens in Thessaloniki and a member of the
-                    Panhellenic Association of Occupational Therapists. She also collaborates with the Metropolitan
-                    College of Thessaloniki, in various roles within the department of occupational therapy, such as
-                    that of
-                    teacher of courses, head teacher of first year and responsible practiceIng. She is specialized in
-                    Sensory Integration, Vision, PECS and TEEACH methods, Social Histories, Behavior Management methods
-                    for
-                    people with disabilities, Motor Learning, PNF, Functional Tone Management, Animal Assisted Therapy,
-                    Circus Therapy and many other methods. In 2020 she began her master's degree ( MSc) in
-                    rehabilitation with
-                    a view to neurodevelopmental pediatric rehabilitation at Oxford Brooks University , England.
-                    From the beginning of her career until now she has not stopped educating herself so that the times
-                    do not overtake her and she faces occupational therapy with unquenchable passion, love and
-                    responsibility.
-                </p>
-            </div>
-            <div class="our-team-4">
-                <h3>Katerina</h3>
-                <p>
-                    Katerina Gesou is a graduate of the BSc Occupational Therapy, Queen Margaret University and the
-                    Department of Physical Education and Sports Science (TEFAA) specializing in Special Physical
-                    Education.
-                    She continued her specialization with two master's degrees. The first comes from the Postgraduate
-                    Program "Kinesiology" of the Department of Physical Education and Sport Science of Serres where she
-                    dealt
-                    with the effect of Electrical Stimulation on the fatigue of the muscles of the thenar while the
-                    second
-                    from the Special Inclusive Education European University of Cyprus where she dealt with the
-                    Evaluation of
-                    the understanding of the emotions of others through Psychomotor by children with Autism Spectrum
-                    Disorder.
-                    At the level of training, she has completed the training of Sensory Integration while her personal
-                    portfolio includes the Seminar on learning infant swimming, the seminar on Psychomotor-
-                    Music-Kinetic
-                    Education of EKPA and the seminar of the Hellenic Society Halliwic. Swimming and Therapy for People
-                    with
-                    Special needs. She has also attended the 216-hour Professional Yoga Learning Program specializing in
-                    children's yoga.
-                    She is specialized in PECS and TEEACH methods, Social Histories, Behavioral Management methods for
-                    people with disabilities, Motor Learning and Cognitive Orientation Approach in the daily execution
-                    of a
-                    CO-OP (Cognitive Orientation to daily Occupational Performance) project.
-                    From 2005 to 2018 she worked as an external collaborator in kindergartens and structures for people
-                    with
-                    disabilities, organizing psychomotor and adapted physical activity programs for children with
-                    difficulties in movement. Since 2007 she has been delivering personalized programs of Kinetic
-                    Intervention, Occupational Therapy and Hydrotherapy at home in collaboration with private and public
-                    swimming pools of the city and from 2012-2017 she provided educational parallel support to children
-                    with
-                    Autism Spectrum Disorder (ASD) and Down syndrome, while at the same time she was an external partner
-                    in
-                    a private Physiotherapy Center where she began to specialize in pediatric Occupational Therapy. From
-                    2017-2022 she worked in large Rehabilitation Centers framing the Department of Adult Occupational
-                    Therapy, while at the same time she was in charge of their respective Pediatric Department. Since
-                    2021
-                    she has been working as an occupational therapist at the Pediatric Therapy Center "Excelixi" of
-                    Elena
-                    Koundourou while also collaborating with the Metropolitan College of Thessaloniki as a teacher. The
-                    collaboration with Elena Koundourou developed and matured, resulting in the creation of the Center
-                    for Special Therapies "Simeio".
-                    From the beginning of her career until now she has not stopped training, while her unstoppable
-                    passion
-                    and love for Occupational Therapy remain the driving force to continue her Lifelong Education.
-                </p>
-            </div>
-        </div>
+                </p> -->
+
+        <!-- <div class="our-team-3">
+                        <h3>Elena</h3>
+                        <p>
+                            Elena Koundourou studied occupational therapy at the Technological Educational Institute of
+                            Athens
+                            and completed her studies at the Karolinska Institute of Stockholm, where she also
+                            specialized in
+                            neurological rehabilitation. From 2000 to 2004 she worked as an external collaborator in a
+                            rehabilitation center, special therapies offices and home treatments, while at the same time
+                            she
+                            began to specialize in pediatric occupational therapy and even more specifically in autism.
+                            From
+                            2005 to 2008 she was in charge of the occupational therapy department at a large
+                            rehabilitation
+                            center.
+                            In 2005 she created the occupational therapy center "Exelixis" which maintains to this day
+                            with main
+                            interest the rehabilitation of neurological and developmental disorders in children. In
+                            2014, the
+                            occupational therapy center "Exelixis" co-located and permanently collaborated with the
+                            Speech and
+                            Language
+                            Therapy Center, thus improving the benefits to its customers. This collaboration developed
+                            and
+                            matured, as a
+                            result of which the two centers were united under a new name and the creation of the center
+                            for
+                            special therapies "Simeio".
+                            In addition to the above, she is a supervisor of students and graduates of occupational
+                            therapy, a
+                            member of the interdisciplinary team of many kindergartens in Thessaloniki and a member of
+                            the
+                            Panhellenic Association of Occupational Therapists. She also collaborates with the
+                            Metropolitan
+                            College of Thessaloniki, in various roles within the department of occupational therapy,
+                            such as
+                            that of
+                            teacher of courses, head teacher of first year and responsible practiceIng. She is
+                            specialized in
+                            Sensory Integration, Vision, PECS and TEEACH methods, Social Histories, Behavior Management
+                            methods
+                            for
+                            people with disabilities, Motor Learning, PNF, Functional Tone Management, Animal Assisted
+                            Therapy,
+                            Circus Therapy and many other methods. In 2020 she began her master's degree ( MSc) in
+                            rehabilitation with
+                            a view to neurodevelopmental pediatric rehabilitation at Oxford Brooks University , England.
+                            From the beginning of her career until now she has not stopped educating herself so that the
+                            times
+                            do not overtake her and she faces occupational therapy with unquenchable passion, love and
+                            responsibility.
+                        </p>
+                    </div>
+                    <div class="our-team-4">
+                        <h3>Katerina</h3>
+                        <p>
+                            Katerina Gesou is a graduate of the BSc Occupational Therapy, Queen Margaret University and
+                            the
+                            Department of Physical Education and Sports Science (TEFAA) specializing in Special Physical
+                            Education.
+                            She continued her specialization with two master's degrees. The first comes from the
+                            Postgraduate
+                            Program "Kinesiology" of the Department of Physical Education and Sport Science of Serres
+                            where she
+                            dealt
+                            with the effect of Electrical Stimulation on the fatigue of the muscles of the thenar while
+                            the
+                            second
+                            from the Special Inclusive Education European University of Cyprus where she dealt with the
+                            Evaluation of
+                            the understanding of the emotions of others through Psychomotor by children with Autism
+                            Spectrum
+                            Disorder.
+                            At the level of training, she has completed the training of Sensory Integration while her
+                            personal
+                            portfolio includes the Seminar on learning infant swimming, the seminar on Psychomotor-
+                            Music-Kinetic
+                            Education of EKPA and the seminar of the Hellenic Society Halliwic. Swimming and Therapy for
+                            People
+                            with
+                            Special needs. She has also attended the 216-hour Professional Yoga Learning Program
+                            specializing in
+                            children's yoga.
+                            She is specialized in PECS and TEEACH methods, Social Histories, Behavioral Management
+                            methods for
+                            people with disabilities, Motor Learning and Cognitive Orientation Approach in the daily
+                            execution
+                            of a
+                            CO-OP (Cognitive Orientation to daily Occupational Performance) project.
+                            From 2005 to 2018 she worked as an external collaborator in kindergartens and structures for
+                            people
+                            with
+                            disabilities, organizing psychomotor and adapted physical activity programs for children
+                            with
+                            difficulties in movement. Since 2007 she has been delivering personalized programs of
+                            Kinetic
+                            Intervention, Occupational Therapy and Hydrotherapy at home in collaboration with private
+                            and public
+                            swimming pools of the city and from 2012-2017 she provided educational parallel support to
+                            children
+                            with
+                            Autism Spectrum Disorder (ASD) and Down syndrome, while at the same time she was an external
+                            partner
+                            in
+                            a private Physiotherapy Center where she began to specialize in pediatric Occupational
+                            Therapy. From
+                            2017-2022 she worked in large Rehabilitation Centers framing the Department of Adult
+                            Occupational
+                            Therapy, while at the same time she was in charge of their respective Pediatric Department.
+                            Since
+                            2021
+                            she has been working as an occupational therapist at the Pediatric Therapy Center "Excelixi"
+                            of
+                            Elena
+                            Koundourou while also collaborating with the Metropolitan College of Thessaloniki as a
+                            teacher. The
+                            collaboration with Elena Koundourou developed and matured, resulting in the creation of the
+                            Center
+                            for Special Therapies "Simeio".
+                            From the beginning of her career until now she has not stopped training, while her
+                            unstoppable
+                            passion
+                            and love for Occupational Therapy remain the driving force to continue her Lifelong
+                            Education.
+                        </p>
+                    </div>
+                </div> -->
 
     </section>
 
