Update style to our-team section

--- a/about-us.html
+++ b/about-us.html
@@ -66,59 +66,63 @@
     <section class="our-team-container">
         <h2>Our Team</h2>
 
-        <div class="our-team">
-            <div class="our-team-1">
-                <div class="cv-logo">
-                    <img src="/assets/images/logo-image.png" alt="">
-                </div>
+        <div class="our-team-inner">
+            <div class="our-team">
+                <div class="our-team-1">
+                    <div class="cv-logo">
+                        <img src="/assets/images/logo-image.png" alt="">
+                    </div>
 
-                <div class="our-team-inner">
+                    <div class="our-team-link">
 
-                    <h3>Maria Tsimourdagka</h3>
-                    <p>Speech Therapist</p>
-                    <a href="#">View full profile</a>
-                </div>
-            </div>
-
-            <div class="our-team-2">
-                <div class="cv-logo">
-                    <img src="/assets/images/logo-image.png" alt="">
-                </div>
-
-                <div class="our-team-inner">
-
-                    <h3>Aggeliki Teligiannidou</h3>
-                    <p>Speech Therapist</p>
-                    <a href="#">View full profile</a>
-                </div>
-
-            </div>
-        
-            <div class="our-team-3">
-                <div class="cv-logo">
-                    <img src="/assets/images/logo-image.png" alt="">
-                </div>
-
-                <div class="our-team-inner">
-
-                    <h3>Elena Koundourou</h3>
-                    <p>Occupational Therapist</p>
-                    <a href="#">View full profile</a>
+                        <h3>Maria Tsimourdagka</h3>
+                        <p>Speech Therapist</p>
+                        <a href="#">View full profile</a>
+                    </div>
                 </div>
             </div>
+            <div class="our-team">
+                <div class="our-team-1">
+                    <div class="cv-logo">
+                        <img src="/assets/images/logo-image.png" alt="">
+                    </div>
 
-            <div class="our-team-4">
-                <div class="cv-logo">
-                    <img src="/assets/images/logo-image.png" alt="">
+                    <div class="our-team-link">
+
+                        <h3>Aggeliki Teligiannidou</h3>
+                        <p>Speech Therapist</p>
+                        <a href="#">View full profile</a>
+                    </div>
+
                 </div>
+            </div>
+            <div class="our-team">
+                <div class="our-team-1">
+                    <div class="cv-logo">
+                        <img src="/assets/images/logo-image.png" alt="">
+                    </div>
 
-                <div class="our-team-inner">
+                    <div class="our-team-link">
 
-                    <h3>Katerina Gkesou</h3>
-                    <p>Occupational Therapist</p>
-                    <a href="#">View full profile</a>
+                        <h3>Elena Koundourou</h3>
+                        <p>Occupational Therapist</p>
+                        <a href="#">View full profile</a>
+                    </div>
                 </div>
+            </div>
+            <div class="our-team">
+                <div class="our-team-1">
+                    <div class="cv-logo">
+                        <img src="/assets/images/logo-image.png" alt="">
+                    </div>
 
+                    <div class="our-team-link">
+
+                        <h3>Katerina Gkesou</h3>
+                        <p>Occupational Therapist</p>
+                        <a href="#">View full profile</a>
+                    </div>
+                </div>
             </div>
         </div>
 
