Update style to our-team section for screens 800px and down

--- a/about-us.html
+++ b/about-us.html
@@ -60,7 +60,7 @@
         </div>
 
     </section>
-    
+
     <!-- Our team-->
 
     <section class="our-team-container">
@@ -68,7 +68,7 @@
 
         <div class="our-team-inner">
             <div class="our-team">
-                <div class="our-team-1 our-team-bg">
+                <div class="our-team-1 our-team-bg our-team-bg-sm">
                     <div class="cv-logo">
                         <img src="/assets/images/logo-image.png" alt="">
                     </div>
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="our-team">
-                <div class="our-team-2 our-team-bg">
+                <div class="our-team-2 our-team-bg our-team-bg-sm">
                     <div class="cv-logo">
                         <img src="/assets/images/logo-image.png" alt="">
                     </div>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="our-team">
-                <div class="our-team-3 our-team-bg">
+                <div class="our-team-3 our-team-bg our-team-bg-sm">
                     <div class="cv-logo">
                         <img src="/assets/images/logo-image.png" alt="">
                     </div>
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="our-team">
-                <div class="our-team-4 our-team-bg our-team-bg-h">
+                <div class="our-team-4 our-team-bg our-team-bg-sm">
                     <div class="cv-logo">
                         <img src="/assets/images/logo-image.png" alt="">
                     </div>
