--- a/about-us.html
+++ b/about-us.html
@@ -91,7 +91,7 @@
 
                         <h3>Aggeliki Teligiannidou</h3>
                         <p>Speech Therapist</p>
-                        <a href="#">View full profile</a>
+                        <a href="gelly.html">View full profile</a>
                     </div>
 
                 </div>
@@ -133,40 +133,7 @@
         <!-- <div class="our-team-2"> -->
 
         <!-- <p>
-                    Teligiannidou Angeliki is a graduate of the speech therapy department of the School of Health and
-                    Welfare Professions of the Technological Educational Institute of Epirus in Greece. As part of her
-                    diploma thesis, she has conducted a pilot application of the TOPL 1 test in the Greek population.
-                    She has been working in the private sector as a Speech Therapist since 2007. Since 2008 she has been
-                    running the Speech and Language Therapy Center with Maria Tsimourdaga. She was an external
-                    scientific
-                    associate in the cochlear implantation department of the university clinic of the Ahepa Hospital in
-                    Thessaloniki, from 2008 to 2012.
-                    In 2014, the collaboration with the Occupational Therapy Center began, which led to the creation of
-                    the
-                    Center for Special Therapies Point.
-                    She is specialized in Lidcombe. methods, Neurofunctional Reorganization, Intensive Interaction,
-                    Palin
-                    PCI, P.E.K.S.E. (Level 1). She is a certified sponsor of the Phonetics and Phonological Evolution
-                    Test
-                    (P.S.L., 1995), the weighted language assessment tool Logometer as well as the Developmental Profile
-                    Communication Model: Model of Cycles.
-                    She participated in the workshop (25 hours) on: Problems that occur in the comprehension and
-                    production
-                    of oral speech, in relation to the particular characteristics of the Greek language. Their
-                    evaluation, diagnosis and treatment. (Levanti Irene, 2014).
-                    She has attended numerous seminars such as Stuttering in childhood, Evaluation – Therapeutic
-                    Intervention of Voice Disorders, , Speech Therapy Massage, Vision and Learning, Vision and Autism,
-                    Children's Tracing , Messy Play: Sensory play as a means of development etc.
-                    Attends the Internationally Accredited Hanen Program for
-                    Early Childhood Professionals: Hanen "Teacher Talk" (Center for Training and Lifelong Learning
-                    (K.E.DI.VI.M.) of the National and Kapodistrian University of Athens (NKUA)
-                    Finally, she has published in e-poster form at the 13th International Conference on Cochlear
-                    Implants (Munich, Germany 18-21 June 2014) her research paper on "Comparison of speech
-                    discrimination and
-                    comprehension of cochlear implant users: computer produced speech versus live voice"
-                    She continues to be constantly updated and educated on new scientific methods and developments
-                    related to
-                    the science of speech therapy.
+                    
                 </p> -->
 
         <!-- <div class="our-team-3">
