--- a/gelly.html
+++ b/gelly.html
@@ -47,35 +47,31 @@
 
     <section class="cv-outer">
         <div class="cv">
-            <h3>Maria Tsimourdagka</h3>
+            <h3>Aggeliki Teligiannidou</h3>
             <p>
-                Maria Tsimourdaga is a graduate of St. Kliment Ohridski University, Sofia, Bulgaria. She holds a higher
-                education degree in Speech Therapy and a second specialty in Hearing and Speech Rehabilitation. She also
-                holds postgraduate studies in Special Education - Speech and Language Therapy specializing in
-                Communication Disorders in Development. She has been working as a speech therapist since 2000 and since
-                2002 she maintains the Speech and Language Therapy Center. From September 2002 to June 2004 she worked
-                at the Association of Parents and Guardians of Deaf and Hard of Hearing Children of Central Macedonia
-                while at the same time she was an external scientific associate in the cochlear implantation department
-                of the University Clinic "AHEPA" in Thessaloniki. In 2014, the collaboration with the Occupational
-                Therapy Center "Exelixis" began, which led to the creation of the Center for Special Therapies Point. In
-                2022 she created the Center for Special Therapies "Simeio", after many years of collaboration with the
-                Occupational Therapy Center "Exelixis". She has specialized in the methods of Neurofunctional
-                Reorganization, Intensive Interaction, P.E.S.E. (Level-1), MFT (Myofunctional Therapy) as well as the
-                Multisensory Method of Phonological Awareness, Reading and Writing. She is a certified sponsor of the
-                Vocal and Phonological Progression Test (P.S.L., 1995), the School Readiness Test A Test as well as the
-                weighted language assessment tool Logometer. She participated in the workshop (25 hours) on: Problems
-                that occur in the comprehension and production of oral speech, in relation to the particular
-                characteristics of the Greek language. Their evaluation, diagnosis and treatment. (Levanti Irene, 2014).
-                She has sufficient professional knowledge in Dyslexia – Assessment and Intervention Techniques as well
-                as Deficit Hyperactivity Disorder (ADHD)- (Papanastasiou 2021). She has attended numerous seminars -
-                workshops such as "Speech Problems: Assessment - Differential Diagnosis - Treatment ", THERAPLAY,
-                "Stuttering in childhood", Vision and Learning, Vision and Autism , Cochlear Implants, Speech Therapy
-                Massage, The Child with Sensory Processing Difficulties, Children's Tracing, Messy Play, Music Therapy,
-                Executive Functions, MnemonicProcessing and its Contribution to the Daily Functioning of the Child, etc.
-                She attends the Internationally Accredited Hanen Program for Early Childhood Professionals: Hanen
-                "Teacher Talk". She has also taken part in educational - experiential seminars of the Gestalt
-                Foundation. It continues to be constantly updated and educated on new scientific methods and
-                developments related to the science of speech therapy.
+                Aggeliki Teligiannidou is a graduate of the speech therapy department of the School of Health and
+                Welfare Professions of the Technological Educational Institute of Epirus in Greece. As part of her
+                diploma thesis, she has conducted a pilot application of the TOPL 1 test in the Greek population. She
+                has been working in the private sector as a Speech Therapist since 2007. Since 2008 she has been running
+                the Speech and Language Therapy Center with Maria Tsimourdaga. She was an external scientific associate
+                in the cochlear implantation department of the university clinic of the Ahepa Hospital in Thessaloniki,
+                from 2008 to 2012. In 2014, the collaboration with the Occupational Therapy Center began, which led to
+                the creation of the Center for Special Therapies "Simeio". She is specialized in Lidcombe. methods,
+                Neurofunctional Reorganization, Intensive Interaction, Palin PCI, P.E.K.S.E. (Level 1). She is a
+                certified sponsor of the Phonetics and Phonological Evolution Test (P.S.L., 1995), the weighted language
+                assessment tool Logometer as well as the Developmental Profile Communication Model: Model of Cycles. She
+                participated in the workshop (25 hours) on: Problems that occur in the comprehension and production of
+                oral speech, in relation to the particular characteristics of the Greek language. Their evaluation,
+                diagnosis and treatment. (Levanti Irene, 2014). She has attended numerous seminars such as Stuttering in
+                childhood, Evaluation – Therapeuti Intervention of Voice Disorders, , Speech Therapy Massage, Vision and
+                Learning, Vision and Autism, Children's Tracing , Messy Play: Sensory play as a means of development
+                etc. Attends the Internationally Accredited Hanen Program for Early Childhood Professionals: Hanen
+                "Teacher Talk" (Center for Training and Lifelong Learning) of the National and
+                Kapodistrian University of Athens (NKUA) Finally, she has published in e-poster form at the 13th
+                International Conference on Cochlear Implants (Munich, Germany 18-21 June 2014) her research paper on
+                "Comparison of speech discrimination and comprehension of cochlear implant users: computer produced
+                speech versus live voice" She continues to be constantly updated and educated on new scientific methods
+                and developments related to the science of speech therapy.
             </p>
         </div>
     </section>
