Fix issue to footer with address

--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
         <!--Font awesome script-->
 
         <script src="https://kit.fontawesome.com/cdf0a3356f.js" crossorigin="anonymous"></script>
-        
+    </footer>
 </body>
 
 </html>
