--- a/katerina.html
+++ b/katerina.html
@@ -127,10 +127,10 @@
         <div class="copyright">
             <h3>COPYRIGHT</h3>
         </div>
+    </footer>
+    <!--Font awesome script-->
 
-        <!--Font awesome script-->
-
-        <script src="https://kit.fontawesome.com/cdf0a3356f.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/cdf0a3356f.js" crossorigin="anonymous"></script>
 
 </body>
 
