--- a/submit-form.html
+++ b/submit-form.html
@@ -101,7 +101,7 @@
         </div>
 
         <!--Font awesome script-->
-
+    </footer>
         <script src="https://kit.fontawesome.com/cdf0a3356f.js" crossorigin="anonymous"></script>
 
 </body>
