Add content with link for copyright to footer and fix style

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
             </li>
         </ul>
     </header>
-    
+
     <section class="form-container-outer">
         <div class="form-container-bg">
             <div class="form-container-mid">
@@ -148,7 +148,8 @@
             </div>
         </div>
         <div class="copyright">
-            <h3>COPYRIGHT</h3>
+            <p>COPYRIGHT <i class="fa-regular fa-copyright"></i> 2023 <a href="https://www.simeiotherapy.gr"
+                    target="_blank">Κέντρο Ειδικών Θεραπειών “σημείο”</a></p>
         </div>
 
         <!--Font awesome script-->
