--- a/katerina.html
+++ b/katerina.html
@@ -125,7 +125,8 @@
             </div>
         </div>
         <div class="copyright">
-            <h3>COPYRIGHT</h3>
+            <p>COPYRIGHT <i class="fa-regular fa-copyright"></i> 2023 <a href="https://www.simeiotherapy.gr"
+                    target="_blank">Κέντρο Ειδικών Θεραπειών “σημείο”</a></p>
         </div>
     </footer>
     <!--Font awesome script-->
