--- a/submit-form.html
+++ b/submit-form.html
@@ -97,12 +97,13 @@
             </div>
         </div>
         <div class="copyright">
-            <h3>COPYRIGHT</h3>
+            <p>COPYRIGHT <i class="fa-regular fa-copyright"></i> 2023 <a href="https://www.simeiotherapy.gr"
+                    target="_blank">Κέντρο Ειδικών Θεραπειών “σημείο”</a></p>
         </div>
 
         <!--Font awesome script-->
     </footer>
-        <script src="https://kit.fontawesome.com/cdf0a3356f.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/cdf0a3356f.js" crossorigin="anonymous"></script>
 
 </body>
 
