Add content and link to submit-form page

--- a/katerina.html
+++ b/katerina.html
@@ -10,7 +10,7 @@
         content="simeio therapy, special treatment, speech therapy, occupational therapy, parental counseling, dyslexia, autism, london, uk">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Simeio Therapy</title>
+    <title>Simeio Therapy | About us | | Katerina Gkesou</title>
 </head>
 
 <body>
@@ -47,9 +47,9 @@
 
     <section class="cv-outer">
         <div class="cv">
-            <h3>Katerina Gesou</h3>
+            <h3>Katerina Gkesou</h3>
             <p>
-                Katerina Gesou is a graduate of the BSc Occupational Therapy, Queen Margaret University and the
+                Katerina Gkesou is a graduate of the BSc Occupational Therapy, Queen Margaret University and the
                 Department of Physical Education and Sports Science (TEFAA) specializing in Special Physical Education.
                 She continued her specialization with two master's degrees. The first comes from the Postgraduate
                 Program "Kinesiology" of the Department of Physical Education and Sport Science of Serres where she
