--- a/maria.html
+++ b/maria.html
@@ -10,7 +10,7 @@
         content="simeio therapy, special treatment, speech therapy, occupational therapy, parental counseling, dyslexia, autism, london, uk">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Simeio Therapy</title>
+    <title>Simeio Therapy | About us | Maria Tsimourdagka</title>
 </head>
 
 <body>
