--- a/submit-form.html
+++ b/submit-form.html
@@ -10,7 +10,7 @@
         content="simeio therapy, special treatment, speech therapy, occupational therapy, parental counseling, dyslexia, autism, london, uk">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Simeio Therapy</title>
+    <title>Simeio Therapy | Contact | Form Submited</title>
 </head>
 
 <body>
@@ -50,7 +50,12 @@
             <h3>Thank you, your form has been submited</h3>
         </div>
         <div class="return-home">
-            <a href="index.html">Click here to return to home page</a>
+            <p>Click our logo to return to home page</p>
+            <div>
+                <a href="index.html">
+                    <img src="assets/images/logo-image.png" alt="Logo home button">
+                </a>
+            </div>
         </div>
     </section>
 
