Fix typo to contact page

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
         </ul>
     </header>
 
-    <section class="form-container-outer">
+    <div class="form-container-outer">
         <div class="form-container-bg">
             <div class="form-container-mid">
                 <div class="form-container">
@@ -84,11 +84,11 @@
 
                         </div>
                         <div class="form-control">
-                            <label for="commnets">Comments:<span class="required-field">*</span></label>
+                            <label for="comments">Comments:<span class="required-field">*</span></label>
 
 
                             <textarea id="comments" cols="20" rows="5" maxlength="500" name="commnents_form"
-                                class="text-input comments" required></textarea>
+                                class="text-input" required></textarea>
 
                         </div>
                         <div>
@@ -103,7 +103,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
 
 
